--- a/modelo.css
+++ b/modelo.css
@@ -2,7 +2,7 @@ body {
 	
   font: 75px Raleway, sans-serif;
   color: white;
-   background-image: url("https://raw.githubusercontent.com/raulg0bbi/monkastore/master/bg.jpg");
+   background-image: url("bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
