--- a/modelo.css
+++ b/modelo.css
@@ -3,8 +3,9 @@ body {
   font: 75px Raleway, sans-serif;
   color: white;
    background-image: url("bg.jpg");
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
+background-attachment: fixed;
   background-size: cover;
   
 } 
