--- a/modelo.css
+++ b/modelo.css
@@ -3,11 +3,9 @@ body {
   font: 75px Raleway, sans-serif;
   color: white;
    background-image: url("bg.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-background-attachment: fixed;
-  background-size: cover;
 	min-height: 100%;
+    background-position: center;
+    background-size: cover;
   
 } 
 
