--- a/modelo.css
+++ b/modelo.css
@@ -6,7 +6,7 @@ body {
 	min-height: 100%;
     background-position: center;
     background-size: cover;
-  
+  background-repeat: no-repeat;
 } 
 
  .letter {
