--- a/modelo.css
+++ b/modelo.css
@@ -3,7 +3,7 @@ body {
   font: 75px Raleway, sans-serif;
   color: white;
    background-image: url("bg.jpg");
-    background-position: center;
+    background-position: center center;
     background-size: cover;
   background-repeat: no-repeat;
 } 
