--- a/modelo.css
+++ b/modelo.css
@@ -3,37 +3,12 @@ body {
   font: 75px Raleway, sans-serif;
   color: white;
    background-image: url("bg.jpg");
-    background-position: center center;
-    background-size: cover;
+ background-position: center center;
   background-repeat: no-repeat;
-} 
-
- .letter {
-        position: absolute;
-    left: 0;
-    top: 39%;
-    width: 100%;
-    text-align: center;
-        text-shadow: 0px 0px 15px black;
-    }
- /*   .letter:nth-child(1) {
-       -webkit-animation: fade 8s infinite 200ms;
-        animation: fade 8s infinite 1400ms;
-    }*/
-
- 
-    @-webkit-keyframes fade {
-        50% {
-            opacity: 0.02;
-        }
-    }
- 
-    @keyframes fade {
-        50% {
-            opacity: 0.02;
-        }
-    }
-</style>
+background-attachment: fixed;
+  background-size: cover;
+  
+}
 
 .center {
 	position: absolute;
